# iohttpparser

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pvs-suppress.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Doxyfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  codecov.yml  iohttpparser.pc.in  sonar-project.properties
.claude/skills/: ROADMAP.md
.claude/skills/http-rfc-reference/: SKILL.md
.claude/skills/iohttpparser-architecture/: SKILL.md
.claude/skills/iohttpparser-coding-standards/: SKILL.md
.claude/skills/iohttpparser-documentation-style/: SKILL.md
.claude/skills/iohttpparser-release-management/: SKILL.md
.claude/skills/modern-c23/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release.yml  scorecard.yml  sonarcloud.yml  trivy.yml
.serena/: project.yml
bench/: bench_extended_contract.c  bench_parser.c  bench_throughput_compare.c
cmake/: iohttpparserConfig.cmake.in
deploy/podman/: Containerfile
deploy/podman/scripts/: rfc-scraper.py
docs/: README.md
docs/en/: 01-architecture.md  02-comparison.md  03-production-hardening.md  04-parser-ecosystem-comparison.md  05-consumer-contracts.md  06-parser-state.md  07-body-decoder.md  08-testing-methodology.md  09-test-results.md  10-extended-contract-methodology.md  11-extended-contract-results.md  12-release-candidate-checklist.md  13-versioning-and-changelog.md  README.md  api-reference.md  body-decoder.md  codex-tuning-plan.md  parser-state.md
docs/plans/: 2026-03-10-iohttpparser-c23-architecture-plan.md  2026-03-10-iohttpparser-implementation-comparison.md  2026-03-10-iohttpparser-scrum-roadmap.md  2026-03-11-iohttpparser-final-development-plan.md  2026-03-11-sprint-11-comparison-campaign.md  2026-03-11-sprint-11-comparison-report.md  2026-03-11-sprint-7-consumer-contracts.md  2026-03-12-documentation-rewrite-plan.md  2026-03-14-release-pipeline-plan.md  BACKLOG.md  README.md  ROADMAP.md
docs/rfc/: README.md
docs/ru/: 01-architecture.md  02-comparison.md  03-production-hardening.md  04-parser-ecosystem-comparison.md  05-consumer-contracts.md  06-parser-state.md  07-body-decoder.md  08-testing-methodology.md  09-test-results.md  10-extended-contract-methodology.md  11-extended-contract-results.md  12-release-candidate-checklist.md  13-versioning-and-changelog.md  README.md  api-reference.md  body-decoder.md  codex-tuning-plan.md  parser-state.md
examples/: basic_parse.c  connect_tunnel.c  expect_trailers.c  response_upgrade.c
include/iohttpparser/: ihtp_body.h  ihtp_parser.h  ihtp_scanner.h  ihtp_semantics.h  ihtp_types.h  iohttpparser.h
scripts/: build-release-assets.sh  build-uftrace-bench.sh  check-pmi-psi-artifacts.py  check-scanner-bench.sh  lint-docs.py  quality.sh  render-performance-charts.py  render-release-notes.sh  run-body-fuzz.sh  run-coverage.sh  run-pmi-psi.sh  run-profiler-stack.sh  run-release-candidate.sh  run-release-gate.sh  run-scanner-bench.sh  run-scanner-fuzz.sh  run-sprint11-comparison.sh  run-throughput-compare.sh  run-throughput-extended-median.sh  run-throughput-extended.sh  run-throughput-median.sh
scripts/lib/: common.sh
src/: ihtp_body_decoder.c  ihtp_internal.h  ihtp_parser.c  ihtp_scanner_avx2.c  ihtp_scanner_scalar.c  ihtp_scanner_sse42.c  ihtp_semantics.c
tests/artifacts/pmi-psi/: README.md  index.tsv  latest.txt
tests/artifacts/release-candidate/: README.md  index.tsv  latest.txt
tests/corpus/body/: chunked_error_bare_lf_trailer.case  chunked_error_missing_size_lf.case  chunked_incomplete_trailer.case  chunked_ok_simple.case  chunked_ok_trailer_consumed.case  chunked_ok_trailing_bytes.case  fixed_error_overflow.case  fixed_incomplete_partial.case  fixed_ok_complete.case  fixed_ok_zero_length.case
tests/corpus/differential/: llhttp_request_incomplete_headers.case  llhttp_request_lenient_accept_bare_lf.case  llhttp_request_ok_connect_authority.case  llhttp_request_ok_simple_get.case  llhttp_request_strict_reject_bare_lf.case  llhttp_response_incomplete_headers.case  llhttp_response_lenient_accept_bare_lf.case  llhttp_response_ok_simple.case  llhttp_response_ok_switching_protocols.case  llhttp_response_strict_reject_bare_lf.case  pico_request_incomplete_headers.case  pico_request_lenient_accept_bare_lf.case  pico_request_ok_connect_authority.case  pico_request_ok_simple_get.case  pico_request_strict_reject_bare_lf.case  pico_response_incomplete_headers.case  pico_response_lenient_accept_bare_lf.case  pico_response_ok_simple.case  pico_response_ok_switching_protocols.case  pico_response_strict_reject_bare_lf.case
tests/corpus/scanner/: find_avx2_wide_block.case  find_crlf.case  find_embedded_nul.case  find_empty_delims.case  find_high_byte.case  find_long_delims_fallback.case  find_request_space.case  token_invalid_high_byte.case  token_invalid_nul.case  token_invalid_space.case  token_valid_header.case
tests/corpus/semantics-differential/: llhttp_request_content_length_fixed.case  llhttp_request_identical_duplicate_content_length.case  llhttp_request_lenient_te_cl.case  llhttp_request_reject_conflicting_content_length.case  llhttp_request_reject_te_cl.case  llhttp_request_upgrade.case  llhttp_response_204_ignores_content_length.case  llhttp_response_chunked.case  llhttp_response_content_length_fixed.case  llhttp_response_eof_transfer_encoding.case  llhttp_response_http11_eof_default_close.case  llhttp_response_identical_duplicate_content_length.case  llhttp_response_lenient_te_cl.case  llhttp_response_reject_conflicting_content_length.case  (+2 more)
tests/fuzz/: fuzz_chunked.c  fuzz_parser.c  fuzz_scanner.c
tests/unit/: test_body_decoder.c  test_body_decoder_corpus.c  test_differential_corpus.c  test_iohttp_integration.c  test_parser.c  test_parser_state.c  test_scanner.c  test_scanner_backends.c  test_scanner_corpus.c  test_semantics.c  test_semantics_corpus.c  test_semantics_differential.c
(+144 files in other folders)
